--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
-section{
-    @apply py-24
+section {
+  @apply py-24;
+}
+
+.container {
+  @apply container mx-auto px-4;
 }
